# ripple-scout

./: .gitignore  README.md  pyproject.toml
config/: neighbors.json
doc/: core-product.md  implementation_plan.md  product.md  project_questions.md  term.md
scripts/: download_backtest_data.py  generate_core_signals.py  plot_results.py  validate_ripples.py
src/: app.py  data_loader.py  graph.py  main.py  scanner.py
